SERVER-39438 Write "abortTransaction" oplog entry when aborting unprepared transactions with replicated operations